--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "en": "PrettyNoemie CMS package for YunoHost application.",
         "fr": "Package d’application PrettyNoemie CMS pour YunoHost."
     },
-    "version": "1.0",
+    "version": "1.0~ynh1",
     "url": "https://framagit.org/framasoft/PrettyNoemieCMS",
     "license": "GNU Affero General Public License v3.0",
     "maintainer": {
@@ -15,12 +15,12 @@
         "url": "https://framagit.org/framasoft/PrettyNoemieCMS"
     },
     "requirements": {
-        "yunohost": ">= 2.7.2"
+        "yunohost": ">= 3.5"
     },
     "multi_instance": true,
     "services": [
         "nginx",
-        "php5-fpm"
+        "php7.0-fpm"
     ],
     "arguments": {
         "install" : [
@@ -42,15 +42,6 @@
                 },
                 "example": "/prettynoemiecms",
                 "default": "/prettynoemiecms"
-            },
-            {
-                "name": "admin",
-                "type": "user",
-                "ask": {
-                    "en": "Choose an admin user",
-                    "fr": "Choisissez l’administrateur"
-                },
-                "example": "johndoe"
             },
             {
                 "name": "is_public",
